--- a/style.css
+++ b/style.css
@@ -6,14 +6,16 @@ body {
     margin: 0px;
 } 
 
+
 .header {
     display: flex;
-    justify-content: space-around;
-    background-color:  #202938;
-    padding: 10px;
-    
+    justify-content: space-between;
+    background-color:  #1F2937;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 120px;
+    padding-right: 120px;
 }
-
 .header .right {
     display: flex;
     align-items: center;
@@ -31,10 +33,44 @@ body {
     color: rgb(255, 255, 255);
     font-size: 32px;
     font-weight: 1000;
+    margin: 20px;
 }
  .header a{
     color: #cccfd5;
     text-decoration: none;
 }
 
+.introduction {
+    display: flex;
+    justify-content: space-between;
+    background-color:  #1F2937;
+    gap: 16px;
+    padding: 120px;
 
+}
+
+.intro-right h1{
+    margin-top: 18px;
+    margin-bottom: 18px;
+    color: #F9FAF8;
+    font-size: 48px;
+}
+.intro-right p{
+    color: #E5E7EB;
+    font-size: 18px;
+}
+.introduction img {
+    border-radius: 16px;
+}
+
+.sign-up {
+    font-size: 18px;
+    font-weight: bold;
+    color: #F9FAF8;
+    background-color: #3B82F6;
+    border: 0px;
+    padding: 6px;
+    padding-left: 24px;
+    padding-right: 24px;
+    border-radius: 8px;
+}
