--- a/style.css
+++ b/style.css
@@ -74,3 +74,38 @@ body {
     padding-right: 24px;
     border-radius: 8px;
 }
+
+.body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #FFFFFF;
+}
+.body h2 {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: bold;
+
+}
+.body .cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 16px;
+}
+.body .cards .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 10px;
+    border-radius: 16px;
+    border-color: #3B82F6;
+}
+.body .cards .card img{
+    border: 3px solid #3B82F6;
+    border-radius: 16px;
+}
+.body .cards .card p{
+    color: #4b4b4b;
+}
