--- a/style.css
+++ b/style.css
@@ -113,3 +113,19 @@ body {
     color: #4b4b4b;
 }
 
+.body .quote {
+    background-color: #E5E7EB;
+    padding: 24px;
+    padding-left: 200px;
+    padding-right: 200px ;
+    font-size: 36px;
+}
+.body .quote p {
+    margin: 0px;
+}
+.body .author {
+    display: flex;
+    flex-direction: row-reverse;
+    font-size: 20px;
+}
+
