--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
 }
 
 .sign-up {
+    flex :1;
     font-size: 18px;
     font-weight: bold;
     color: #F9FAF8;
@@ -129,3 +130,35 @@ body {
     font-size: 20px;
 }
 
+.advertising {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 120px;
+}
+
+.advertising .banner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap : 50px;
+    background-color: #3B82F6;
+    padding: 50px;
+    padding-left: 100px;
+    padding-right: 100px;
+}
+.advertising h3 {
+    color: #F9FAF8;
+    margin: 0px;
+}
+.advertising p {
+    color: #e9e9e9f4;
+    margin: 3px;
+    max-width: 400px;
+}
+
+.advertising .sign-up {
+    font-size: 15px;
+    border: 1px solid #FFFFFF;
+}
