styles footer && finish whole project

--- a/style.css
+++ b/style.css
@@ -162,3 +162,11 @@ body {
     font-size: 15px;
     border: 1px solid #FFFFFF;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    color: #E5E7EB;
+}
