--- a/style.css
+++ b/style.css
@@ -143,10 +143,11 @@ body {
     justify-content: space-between;
     align-items: center;
     gap : 50px;
+    border-radius: 8px;
     background-color: #3B82F6;
-    padding: 50px;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding: 40px;
+    padding-left: 90px;
+    padding-right: 90px;
 }
 .advertising h3 {
     color: #F9FAF8;
